bad/assign_new_array_bool_void.example_compiler_output
ERROR
[1mbad/assign_new_array_bool_void.lat:5:17: [1;31merror: [0;1mleft side is not assignable[m
	new boolean[3] = vfunc();
	               [1;32m^[m
[1mbad/assign_new_array_bool_void.lat:5:2: [1;34mnote: [0;1mleft side starts here[m
	new boolean[3] = vfunc();
	[1;32m^[m
